--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary">#FF22C1C3</color>
+    <color name="secondary">#FFFDBB2D</color>
+    <color name="alternative">#FF20C1CC</color>
+    <color name="gray">#33333380</color>
 </resources>
