--- a/app/src/main/res/xml-v31/weather_widget.xml
+++ b/app/src/main/res/xml-v31/weather_widget.xml
@@ -1,9 +1,10 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/glance_default_loading_layout"
+    android:maxResizeWidth="512dp"
+    android:maxResizeHeight="512dp"
+    android:minWidth="128dp"
+    android:minHeight="64dp"
     android:minResizeWidth="128dp"
     android:minResizeHeight="64dp"
-    android:minHeight="128dp"
-    android:minWidth="64dp"
-    android:resizeMode="vertical|horizontal"
-    >
-</appwidget-provider>
+    android:resizeMode="horizontal|vertical"
+   />
